# scrapper_Fast_API

./: .env_example  README.md  docker-compose.yml
app/: Dockerfile  config.py  database.py  main.py  pyproject.toml  requirements.txt
app/cards/: models.py  routers.py  schemas.py  tasks.py
app/scrapper/: wilberries.py
