[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sumchatyj"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.9"
uvicorn = "^0.21.1"
celery = "^5.2.7"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
